--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -12,7 +12,7 @@
         <div class="about-details">
           <div class="detail-item">
             <h3>Location</h3>
-            <p>İstanbul, Turkey</p>
+            <p>İzmir, Turkey</p>
           </div>
           <div class="detail-item">
             <h3>Current Role</h3>
