--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,6 +4,7 @@
   <app-skills></app-skills>
   <app-experience></app-experience>
   <app-education></app-education>
+  <app-certificates></app-certificates>
   <app-projects></app-projects>
   <app-contact></app-contact>
 </main> 
