--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,7 @@
         <li><a href="#skills" class="nav-link" (click)="closeMenu()">Skills</a></li>
         <li><a href="#experience" class="nav-link" (click)="closeMenu()">Experience</a></li>
         <li><a href="#education" class="nav-link" (click)="closeMenu()">Education</a></li>
+        <li><a href="#certificates" class="nav-link" (click)="closeMenu()">Certificates</a></li>
         <li><a href="#projects" class="nav-link" (click)="closeMenu()">Projects</a></li>
         <li><a href="#contact" class="nav-link" (click)="closeMenu()">Contact</a></li>
       </ul>
